--- a/.github/workflows/vuln-scan.yml
+++ b/.github/workflows/vuln-scan.yml
@@ -2,7 +2,7 @@ name: Daily Vulnerability Scan
 
 on:
   schedule:
-    - cron: '0 9 * * *'  # Run daily at 9 AM UTC
+    - cron: '0 */6 * * *'  # Run daily at 9 AM UTC
   workflow_dispatch:  # Allow manual trigger
 
 jobs:
